--- a/404.html
+++ b/404.html
@@ -13,7 +13,7 @@
 <meta property="og:url" content="https://dineshladi.github.io/datamusings/404.html" />
 <meta property="og:site_name" content="DataMusings" />
 <script type="application/ld+json">
-{"headline":"DataMusings","description":"A data musings blog using Python and R.","@type":"WebPage","url":"https://dineshladi.github.io/datamusings/404.html","@context":"https://schema.org"}</script>
+{"description":"A data musings blog using Python and R.","headline":"DataMusings","@type":"WebPage","url":"https://dineshladi.github.io/datamusings/404.html","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 <link rel="stylesheet" href="/datamusings/assets/css/style.css"><link type="application/atom+xml" rel="alternate" href="https://dineshladi.github.io/datamusings/feed.xml" title="DataMusings" /><link rel="shortcut icon" type="image/x-icon" href="/datamusings/images/favicon.ico"><!-- Begin Jekyll SEO tag v2.6.1 -->
 <title>DataMusings | A data musings blog using Python and R.</title>
@@ -26,11 +26,27 @@
 <meta property="og:url" content="https://dineshladi.github.io/datamusings/404.html" />
 <meta property="og:site_name" content="DataMusings" />
 <script type="application/ld+json">
-{"headline":"DataMusings","description":"A data musings blog using Python and R.","@type":"WebPage","url":"https://dineshladi.github.io/datamusings/404.html","@context":"https://schema.org"}</script>
+{"description":"A data musings blog using Python and R.","headline":"DataMusings","@type":"WebPage","url":"https://dineshladi.github.io/datamusings/404.html","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 
 <link href="https://unpkg.com/@primer/css/dist/primer.css" rel="stylesheet" />
 <link rel="stylesheet" href="//use.fontawesome.com/releases/v5.0.7/css/all.css"><link type="application/atom+xml" rel="alternate" href="https://dineshladi.github.io/datamusings/feed.xml" title="DataMusings" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.11.1/dist/katex.min.css" integrity="sha384-zB1R0rpPzHqg7Kpt0Aljp8JPLqbXI3bhnPWROx27a9N0Ll6ZP/+DiW/UqRcLbRjq" crossorigin="anonymous">
+    <script type="text/javascript" async src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-MML-AM_CHTML"> </script>
+    <script defer src="https://cdn.jsdelivr.net/npm/katex@0.11.1/dist/katex.min.js" integrity="sha384-y23I5Q6l+B6vatafAwxRu/0oK/79VlbSz7Q9aiSZUvyWYIYsd+qj+o24G5ZU2zJz" crossorigin="anonymous"></script>
+    <script defer src="https://cdn.jsdelivr.net/npm/katex@0.11.1/dist/contrib/auto-render.min.js" integrity="sha384-kWPLUVMOks5AQFrykwIup5lo0m3iMkkHrD0uJ4H5cjeGihAutqP0yW0J6dpFiVkI" crossorigin="anonymous"></script>
+    <script>
+    document.addEventListener("DOMContentLoaded", function() {
+        renderMathInElement( document.body, {
+        delimiters: [
+            {left: "$$", right: "$$", display: true},
+            {left: "[%", right: "%]", display: true},
+            {left: "$", right: "$", display: false}
+        ]}
+        );
+    });
+    </script>
+
 
 <script>
 function wrap_img(fn) {
